--- a/build.gradle
+++ b/build.gradle
@@ -3,3 +3,10 @@ plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
 }
+
+ext {
+    appCompatVersion = '1.2.0'
+
+    roomVersion = '2.2.5'
+    lifecycleVersion = '2.2.0'
+}
