PGD02-182 CU07_IT4_IMP_Implement Components

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,13 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ResenhaActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".Registro"
             android:exported="false">
             <meta-data
