--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ android {
     namespace 'es.unex.fulltank'
     compileSdk 32
 
+
     defaultConfig {
         applicationId "es.unex.fulltank"
         minSdk 29
@@ -33,7 +34,7 @@ android {
 }
 
 dependencies {
-    
+
     //AppCompat
     implementation "androidx.appcompat:appcompat:$appCompatVersion"
 
@@ -54,7 +55,34 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //DEPENDENCIAS NECESARIAS PARA TEST
+    //Incluimos las librerías de test en nuestro proyecto
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'androidx.test:core:1.1.1'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'androidx.test.ext:junit:1.1.4'
+    testImplementation "org.robolectric:robolectric:4.8.1"
+    testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.8.4'
+    testImplementation 'org.mockito:mockito-core:2.22.0'
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.2.1")
+
+    //DEPENDENCIAS NECESARIAS PARA ANDROID TEST
+    //Necesarias para el motor de jUnit
+    androidTestImplementation 'org.robolectric:robolectric:4.8.1'
+
+    //espresso
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
+    androidTestImplementation 'org.mockito:mockito-core:2.22.0'
+    androidTestImplementation 'org.mockito:mockito-android:2.18.3'
+
+    //for json to model
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.9.7'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.7'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.7'
+
 }
