--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 
     // Room
     implementation "androidx.room:room-runtime:2.4.3"
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0'
     annotationProcessor "androidx.room:room-compiler:2.4.3"
 
     //API GOB CARBURANTES
@@ -68,17 +69,18 @@ dependencies {
     testImplementation 'org.mockito:mockito-inline:2.13.0'
     testImplementation("com.squareup.okhttp3:mockwebserver:4.2.1")
 
-    //DEPENDENCIAS NECESARIAS PARA ANDROID TEST
-    //Necesarias para el motor de jUnit
-    androidTestImplementation 'org.robolectric:robolectric:4.8.1'
 
     //espresso
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
     androidTestImplementation 'org.mockito:mockito-core:2.22.0'
     androidTestImplementation 'org.mockito:mockito-android:2.18.3'
+
+    androidTestImplementation 'androidx.test:core:1.1.1'
+    androidTestImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
 
     //for json to model
     implementation 'com.fasterxml.jackson.core:jackson-core:2.9.7'
@@ -86,4 +88,5 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.7'
 
 }
+
 
