--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,13 +89,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0'
 
     //Dependencias pagina web
-    testImplementation 'io.cucumber:cucumber-java:5.6.0'
-    testImplementation 'io.cucumber:cucumber-junit:5.6.0'
-    testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
-    testImplementation 'org.seleniumhq.selenium:selenium-chrome-driver:3.141.59'
-    testImplementation 'commons-io:commons-io:2.6'
-    testImplementation 'org.apache.commons:commons-lang3:3.11'
-    testImplementation 'org.apache.commons:commons-collections4:4.4'
-    testImplementation 'org.apache.commons:commons-math3:3.6.1'
+    androidTestImplementation 'io.cucumber:cucumber-java:5.6.0'
+    androidTestImplementation 'io.cucumber:cucumber-junit:5.6.0'
+    androidTestImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    androidTestImplementation 'org.seleniumhq.selenium:selenium-chrome-driver:3.141.59'
+    androidTestImplementation 'commons-io:commons-io:2.6'
+    androidTestImplementation 'org.apache.commons:commons-lang3:3.11'
+    androidTestImplementation 'org.apache.commons:commons-collections4:4.4'
+    androidTestImplementation 'org.apache.commons:commons-math3:3.6.1'
 
 }
